--- a/cfg/test_cfg.yaml
+++ b/cfg/test_cfg.yaml
@@ -10,7 +10,7 @@ num_samples: 10
 attention_resolutions: '40, 20, 10'
 use_ddim: True
 timestep_respacing: ddim25
-stroke_path: './char_stroke.txt'
+stroke_path: './chinese_stroke.txt'
 model_path: 'path_to_trained_model'
 sty_img_path: 'path_to_reference_image'
 total_txt_file: './total_chn.txt'
