--- a/cfg/test_cfg.yaml
+++ b/cfg/test_cfg.yaml
@@ -10,9 +10,9 @@ num_samples: 10
 attention_resolutions: '40, 20, 10'
 use_ddim: True
 timestep_respacing: ddim25
-stroke_path: './char_stroke.txt'
-model_path: 'path_to_trained_model'
-sty_img_path: 'path_to_reference_image'
+stroke_path: './chinese_stroke.txt'
+model_path: './trained_models/opt030000.pt'
+sty_img_path: './reference_image/00510.png'
 total_txt_file: './total_chn.txt'
 gen_txt_file: './gen_char.txt'
 img_save_path: './result'
