--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,14 @@ save_folder
 ttf_folder
 utils/__pycache__
 trained_models
-ttf_folder_bak
-reference_image
+trained_models_20
+trained_models_20_ft
+trained_models_20_test
+trained_models_6625
+trained_models_6625_ft
 result
+dataset-20
+dataset-4090
+dataset-6625
+dataset-wpai
 dataset
